# ska-tmc-low-integration

./: .gitignore  .gitlab-ci.yml  .release  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  KUBECONFIG_main  KUBECONFIG_ms  Makefile  README.md  pylintrc  pyproject.toml  something.py
charts/ska-tmc-low/: Chart.yaml  values.yaml
charts/ska-tmc-template/: Chart.yaml
charts/ska-tmc-testing-low/: Chart.yaml  tmc_csp_values.yaml  tmc_csp_with_simulators.yaml  tmc_mccs.yaml  tmc_mccs_values.yaml  tmc_sdp_values.yaml  values.yaml
docs/src/: conf.py  index.rst  tmc_api.rst
eda_configuration/: tmc_low_attributes.yaml
tests/: __init__.py  conftest.py  pytest.ini  xray-config.json
tests/data/: command_Configure_low.json  command_assign_resource_low.json  command_release_resource_low.json  command_scan_low.json
tests/features/: check_abort_command.feature
tests/integration/: test_low_abort_restart_command_in_configuring.py  test_low_abort_restart_in_ready.py  test_telescopestandby_command_low.py
tests/tmc/: conftest.py  test_abort_command_not_allowed_empty.py  test_assign_release_command_low.py  test_assign_resources_command_not_allowed_propagation_low.py  test_central_node_standby_comand.py  test_configure_end_command_low.py  test_configure_error_propagation.py  test_configure_invalid_json_low.py  test_configure_timeout.py  test_error_propagation_mccs.py  test_low_abort_restart_command_in_aborting.py  test_low_abort_restart_command_in_configuring.py  test_low_abort_restart_command_in_idle.py  test_low_abort_restart_command_in_restarting.py  test_low_abort_restart_in_ready.py  test_skb_643.py  (+26 more)
(+276 files in other folders)
